--- a/website/styles.css
+++ b/website/styles.css
@@ -1,6 +1,3 @@
-body {
-    background: repeating-conic-gradient(
-        from 3deg at 25% 25%,
-        hsl(200, 100%, 50%) 0deg 15deg,
-        hsl(200, 100%, 60%) 10deg 30deg);
-}
+div {
+    min-width: 100%; min-height: 100vh; margin-bottom: 0px;
+  }
